--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fsbin",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Simple file system utility for npm scripts",
   "main": "index.js",
   "scripts": {
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnfliu818/fsbin.git"
+    "url": "git+https://github.com/highmountaintea/fsbin.git"
   },
   "author": "johnfliu",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/johnfliu818/fsbin/issues"
+    "url": "https://github.com/highmountaintea/fsbin/issues"
   },
-  "homepage": "https://github.com/johnfliu818/fsbin#readme",
+  "homepage": "https://github.com/highmountaintea/fsbin#readme",
   "dependencies": {
     "fs-extra": "^5.0.0"
   }
