--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "fsbin",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Simple file system utility for npm scripts",
+  "keywords":["fs", "rimraf", "rmdir", "mkdirp", "file system", "file", "copy", "directory", "recursive"],
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
